[gd_scene load_steps=5 format=2]

[ext_resource path="res://mocraAdventure/map/entities/server/texture.png" type="Texture" id=1]
[ext_resource path="res://mocraAdventure/map/entities/server/entity.gd" type="Script" id=2]
[ext_resource path="res://mocraAdventure/map/entities/server/light.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 200 )

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="firstRow" type="Node2D" parent="."]

[node name="green" parent="firstRow" instance=ExtResource( 4 )]
position = Vector2( -140, -115 )

[node name="orange" parent="firstRow" instance=ExtResource( 4 )]
position = Vector2( -110, -115 )

[node name="red" parent="firstRow" instance=ExtResource( 4 )]
position = Vector2( -80, -115 )

[node name="secondRow" type="Node2D" parent="."]
position = Vector2( 0, 100 )

[node name="green" parent="secondRow" instance=ExtResource( 4 )]
position = Vector2( -140, -115 )

[node name="orange" parent="secondRow" instance=ExtResource( 4 )]
position = Vector2( -110, -115 )

[node name="red" parent="secondRow" instance=ExtResource( 4 )]
position = Vector2( -80, -115 )

[node name="thirdRow" type="Node2D" parent="."]
position = Vector2( 0, 204 )

[node name="green" parent="thirdRow" instance=ExtResource( 4 )]
position = Vector2( -140, -115 )

[node name="orange" parent="thirdRow" instance=ExtResource( 4 )]
position = Vector2( -110, -115 )

[node name="red" parent="thirdRow" instance=ExtResource( 4 )]
position = Vector2( -80, -115 )
